--- a/ProjektZPR/ProjektZPR.vcxproj.filters
+++ b/ProjektZPR/ProjektZPR.vcxproj.filters
@@ -68,6 +68,9 @@
     <ClCompile Include="GeneratedFiles\Release\moc_createnewtest.cpp">
       <Filter>Generated Files\Release</Filter>
     </ClCompile>
+    <ClCompile Include="DatabaseSqlite.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="projektzpr.h">
@@ -101,6 +104,9 @@
     </ClInclude>
     <ClInclude Include="GeneratedFiles\ui_createnewtest.h">
       <Filter>Generated Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DatabaseSqlite.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
